--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = {text = "MIT"}
 authors = [{name = "Gerald"}]
 dependencies = [
   "pygame>=2.5",
+  "colorlog>=6.10.1",
 ]
 
 [project.optional-dependencies]
